<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeFragment"
        android:title="@string/home_string"
        android:icon="@drawable/home_icon"
        android:enabled="true" />

    <item android:id="@+id/profileFragment"
        android:title="@string/profile_string"
        android:icon="@drawable/profile_icon"
        android:enabled="true"/>

    <item android:id="@+id/cartFragment"
        android:title="@string/cart_string"
        android:icon="@drawable/cart_icon"
        android:enabled="true"/>

    <item android:id="@+id/chatFragment"
        android:title="@string/chat_string"
        android:icon="@drawable/chat_icon"
        android:enabled="true"/>
</menu>