<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeActivity">


    <TextView
        android:id="@+id/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_in_home"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"/>

    <ImageButton
        android:id="@+id/notification_btn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/notification_icon"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/title_app"
        app:layout_constraintBottom_toBottomOf="@id/title_app"
        android:background="@drawable/notification_btn_rectangle"
        android:elevation="3dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_outline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/title_app"
        app:layout_constraintEnd_toStartOf="@id/filter_btn"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_in_search_box"
            android:textColor="@color/orange_dark"
            android:background="@drawable/search_box_rectangle"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/filter_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/search_outline"
        app:layout_constraintBottom_toBottomOf="@id/search_outline"
        android:src="@drawable/filter_icon"
        android:background="@drawable/filter_btn_rectangle"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/promotion_layout"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/search_outline"
        android:background="@drawable/promotion_rectangle">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/promotion_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/promotion_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promotion_title"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />
        
        <TextView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:text="@string/buy_text"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/promotion_title"
            app:layout_constraintStart_toStartOf="@id/promotion_title"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:background="@drawable/buy_text_rectangle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/nearest_restaurant_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearest_restaurant_text"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/promotion_layout"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/view_more_restaurant_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_more_text"
        android:textSize="16sp"
        android:textColor="@color/orange_dark"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/promotion_layout"
        android:layout_marginTop="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/nearest_restaurant_rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nearest_restaurant_tv"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/popular_menu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_menu_text"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/nearest_restaurant_rv"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/view_more_menu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_more_text"
        android:textSize="16sp"
        android:textColor="@color/orange_dark"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/nearest_restaurant_rv"
        android:layout_marginTop="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popular_menu_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/popular_menu_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="8dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94890511" />


</androidx.constraintlayout.widget.ConstraintLayout>